--- a/index.html
+++ b/index.html
@@ -49,6 +49,21 @@
     <button class="third">View Recipes</button>
   </div>
 </div>
+<div class="main-body3">
+  <div class="innersection">
+    <h4 class="first">Store Locator</h4>
+    <p class="second">Find your favorite flavors of uptimism and keep your glass half-full.
+    </p>
+    <button class="third">Find Products</button>
+  </div>
+</div>
+<footer>
+  <div class="footer">
+    <span>Privacy Policy</span><span>CA Notice at Collection</span><span>Do Not Sell or Share My Personal Information</span><span>Terms of Use</span><span> Accessibility</span><span>Contact</span><span>FAQ</span><span>Careers</span>
+  </div>
+  7UP and BE UPTIMISTIC are trademarks of Dr Pepper/Seven Up, Inc. © 2024 Dr Pepper/Seven Up, Inc.
+</footer>
+
 </body>
 
 </html>
