--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <header>
-  <img src="https://www.7up.com/images/7up-logo-large.png" alt="icon" class="icon" />
+  <img src="https://www.7up.com/images/7up-logo-large.png" class="icon" alt="icon" class="icon" />
   <div>
     <span id="left">
       <span id="things">
