--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>7UP|7Up.com</title>
   <link rel="stylesheet" href="./style.css" />
+ 
+  <link rel="shortcut icon" href=" https://www.7up.com/img/favicon.ico" type="image/x-icon">
 </head>
 
 <header>
