--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  
   <link rel="shortcut icon" href=" https://www.7up.com/img/favicon.ico" type="image/x-icon">
 </head>
-
+<!-- ----------------- Heder section ---------------------->
 <header>
   <img src="https://www.7up.com/images/7up-logo-large.png" class="icon" alt="icon" class="icon" />
   <div>
@@ -31,6 +31,7 @@
       </span>
   </div>
 </header>
+<!-------------------- SECTION 1   ---------------------------->
 <div id="main-body1">
   <div class="innertext">
 
@@ -40,6 +41,7 @@
     <button>Learn More</button>
   </div>
 </div>
+<!-------------------- SECTION 2   ---------------------------->
 <div class="main-body2">
   <div class="innersection">
     <h4 class="first">Recipes</h4>
@@ -48,6 +50,7 @@
     <button class="third">View Recipes</button>
   </div>
 </div>
+<!-------------------- SECTION 3   ---------------------------->
 <div class="main-body3">
   <div class="innersection">
     <h4 class="first">Store Locator</h4>
@@ -56,6 +59,7 @@
     <button class="third">Find Products</button>
   </div>
 </div>
+<!-------------------- FOOTER   ---------------------------->
 <footer>
   <div class="footer">
     <span>Privacy Policy</span><span>CA Notice at Collection</span><span>Do Not Sell or Share My Personal Information</span><span>Terms of Use</span><span> Accessibility</span><span>Contact</span><span>FAQ</span><span>Careers</span>
