refactor:used sementic tag for navbar

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>7UP|7Up.com</title>
   <link rel="stylesheet" href="./style.css" />
  
-  <link rel="shortcut icon" href=" https://www.7up.com/img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="assets/icons/7-Up-logo-vector-01.svg" sizes="any" type="image/svg+xml">
+
 </head>
 <!-- ----------------- Heder section ---------------------->
 <header>
@@ -16,10 +17,10 @@
     <span id="left">
       <span id="things">
 
-        <span>PRODUCTS</span>
-        <span>RECEPIECE</span>
-        <span>STORES</span>
-        <span id="social">
+        <nav>PRODUCTS</nav>
+        <nav>RECEPIECE</nav>
+        <nav>STORES</nav>
+        <nav id="social">
           <img src="https://www.7up.com/images/social-media/socialIcons_facebook.png" alt="" /><img
             src="https://www.7up.com/images/social-media/socialIcons_instagram.png" alt="" /><img
             src="https://www.7up.com/images/social-media/socialIcons_instagram.png" alt="" />
@@ -27,7 +28,7 @@
           <img src="https://www.7up.com/images/social-media/socialIcons_youtube.png" alt="" />
           <img src="https://www.7up.com/images/social-media/socialIcons_pinterest.png" alt="" />
 
-        </span>
+        </nav>
       </span>
   </div>
 </header>
